# grapes-rs

./: .cspell.json  CHANGELOG.md  Cargo.toml  README.md
.config/copier/: .copier-answers.release.yaml  .copier-answers.rust.yaml  .copier-answers.shared.yaml
.config/release-please/: config.json
.github/workflows/: build.yaml  ci.yaml  release.yaml  test.yaml
src/cli/: completion.rs  markdown.rs  mod.rs
