#:schema https://www.schemastore.org/cargo.json

[package]
name = "liblaf-grapes"
version = "0.2.2"
authors = ["liblaf <30631553+liblaf@users.noreply.github.com>"]
edition = "2024"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/liblaf/grapes-rs"
license = "MIT"
keywords = []
categories = []

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", optional = true }
clap-markdown = { version = "0.1", optional = true }
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing",
] }
color-eyre = "0.6"
supports-color = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
clap-complete = ["dep:clap_complete"]
clap-markdown = ["dep:clap-markdown"]
